// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI hLVmv"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI cHpDcs"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI kzOuxC"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-RYuTI eA-dqHW"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-RYuTI dcJbWR"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI diQThD"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-fHsjty RmHsK"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI cQXEwx"
      placeholder="medium"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI gKrYEy"
      placeholder="large"
      type="time"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI kZbEvN"
        placeholder="xlarge"
        type="time"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI jrRCOC"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI bRyTGZ"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT hwIgqE"
    >
      <input
        className="sc-RYuTI eugHcA"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
